<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.squaresdevelopers.tyft.views.tyft.ui.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.squaresdevelopers.tyft.views.tyft.ui.list.TruckListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.squaresdevelopers.tyft.views.tyft.ui.setting.TyftSettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_notifications" />
</navigation>