<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".views.fragments.loginSignUpViews.LoginSignUpFragment">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginLeft="20sp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_above="@id/welcome"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginLeft="20sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"
        android:textColor="@color/white"
        android:layout_above="@id/btn_user_one"/>


    <Button
        android:id="@+id/btn_user_one"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/truck_owner"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_above="@id/btn_user_two"
        />

    <Button
        android:id="@+id/btn_user_two"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:textColor="@color/white"
        android:text="@string/tyft"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true" />
</RelativeLayout>