<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:clickable="false"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_imperail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_spanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:clickable="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginRight="20dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:textColor="#e60000" />
    </LinearLayout>



</LinearLayout>