<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve"
    tools:context=".views.signup.ui.TruckSignUpFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/round_layout"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/poppin_light"
            android:text="@string/singup"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_seller_email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/account"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="25sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/et_seller_password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/et_email"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="25sp"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/et_seller_textfield"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/account"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="25sp"
            android:hint="@string/name_of_truck"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/poppin_light"
            android:text="please select your photos"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_seller_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/profile"
                app:civ_border_color="#EEEEEE"
                app:civ_border_width="4dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_seller_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20sp"
                android:src="@drawable/profile"
                app:civ_border_color="#EEEEEE"
                app:civ_border_width="4dp" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_seller_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/regular"
            android:text="@string/singup"
            android:textColor="@color/black" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/below_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.9sp"
            android:background="@color/white" />


        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.5"
            android:src="@drawable/back_arrow"
            android:tint="@color/white" />

        <View
            android:id="@+id/view"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/iv_back"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/view">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/already"
                android:textColor="@color/white" />

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>