<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve"
    tools:context=".views.signup.ui.TyftSignUpFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="50sp"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"
        android:gravity="center"
        android:background="@drawable/round_layout"
        android:orientation="vertical">
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singup"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:fontFamily="@font/poppins_medium"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"/>

        <EditText
            android:id="@+id/et_customer_email"
            android:layout_below="@id/account"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/regular"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/et_customer_username"
            android:layout_below="@id/account"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/regular"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:hint="Username"/>

        <EditText
            android:id="@+id/et_customer_password"
            android:layout_below="@id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/regular"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:hint="@string/password"/>


        <Button
            android:id="@+id/btn_customer_login"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:text="@string/singup"
            android:layout_below="@id/et_password"
            android:layout_marginTop="10sp"
            android:layout_marginRight="30sp"
            android:layout_marginLeft="30sp"
            android:fontFamily="@font/regular"
            android:layout_marginBottom="20sp"
            android:background="@drawable/round_button"
            android:textColor="@color/black"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/below_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.9sp"
            android:background="@color/white" />


        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            android:src="@drawable/back_arrow"
            android:tint="@color/white" />

        <View
            android:id="@+id/view"
            android:layout_toRightOf="@+id/iv_back"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/view">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/already"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:textColor="@color/white" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>