<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.squaresdevelopers.tyft.views.tyft.ui.list.TruckDetailActivity">

    <FrameLayout
        android:id="@+id/map_layout"
        android:layout_width="match_parent"
        android:layout_height="250sp">

        <com.google.android.gms.maps.MapView
            android:id="@+id/truck_mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:apiKey="AIzaSyDBtVfqP-o_UQaZTcXggD320b23G-ujRuQ">
        </com.google.android.gms.maps.MapView>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map_layout"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button_white">


    <LinearLayout
        android:id="@+id/pic_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_one"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="1dp" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_two"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            android:layout_marginLeft="10dp"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="1dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/truck_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pic_layout"
        android:layout_marginTop="10sp"
        android:layout_marginStart="15dp"
        android:maxLines="1"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_availbel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pic_layout"
        android:layout_toEndOf="@id/truck_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12sp"
        android:textColor="@color/blue"
        android:text="@string/visible"/>

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_below="@id/tv_availbel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/from"/>

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:text="00:00:00"/>

        <TextView
            android:id="@+id/to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/to"/>

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textStyle="bold"
            android:text="00:00:00"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_below="@id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="On"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textStyle="bold"
            android:text="00:00:00"/>

    </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_navigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/data_layout"
        android:background="@color/yellow"
        android:text="Navigate"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:textStyle="bold"/>

</RelativeLayout>
